--- a/p5/readme.html
+++ b/p5/readme.html
@@ -158,7 +158,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <h1 class="title">103 Project 5: Towers of Hanoi</h1>
 <h2 class="author"></h2>
 </div>
-<h3 id="due-friday-april-20th-1159pm"><em>Due:</em> Friday, April 20th@ 11:59pm</h3>
+<h3 id="due-sunday-april-22nd-1159pm"><em>Due:</em> Sunday, April 22nd@ 11:59pm</h3>
 <!---{{ Synopsis-->
 <h2 id="synopsis">Synopsis</h2>
 <p>In this project, you are asked to implement a general solution to the <em>Towers of Hanoi</em> puzzle. Here are a few things you should learn from this:</p>
